# nightingale

./: .gitignore
nightingale-backend/: Cargo.toml
nightingale-backend/src/: auth.rs  blog.rs  main.rs  models.rs  signal.rs  ws.rs
nightingale-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
nightingale-frontend/src/: App.jsx  index.css  main.jsx
nightingale-frontend/src/api/: index.js
nightingale-frontend/src/components/: BlogBuilder.jsx  Navbar.jsx
nightingale-frontend/src/contexts/: AuthContext.jsx
nightingale-frontend/src/pages/: BlogEdit.jsx  BlogList.jsx  Call.jsx  Chat.jsx  Login.jsx  Profile.jsx  Register.jsx
